# -

./: .gitignore  pyproject.toml  t.py
app/: create_db_table.py  main.py
app/api/: __init__.py  auth.py  fastapi_users_routers.py  messages.py  users.py
app/api/api_v1/: __init__.py  auth.py  fastapi_users_routers.py
app/api/auth/: user.py
app/api/dependencies/: access_tokens.py  backend.py  fastapi_users_routers.py  user_manager.py  users.py
app/api/dependencies/authentication/: access_tokens.py  backend.py  fastapi_users_routers.py  strategy.py  user_manager.py  users.py
app/core/: config.py  db_helper.py
app/core/authentication/: user_manager.py
app/core/models/: access_token.py  db_models.py  user.py
app/core/models/mixins/: id_int_pk.py  name_str_pk.py
app/core/schemas/: user.py
