[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.2"}
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
uvicorn = "^0.32.0"
asyncio = "^3.4.3"
